By default, new nodes, edges and tools are explicitly configured to invoke the default canonical behavior; it is just made explicit in the model and can now serve as a based or removed to disable the behavior.

== v2023.1.0

=== Architectural decision records

- [ADR-075] Add support for a basic image widget
- [ADR-076] Allow users to upload their own custom images
- [ADR-077] Improve support for direct edit in diagram
- [ADR-078] Add support for toolbar actions in Form/FormDescriptionEditor
- [ADR-079] Add support for a rich text edition widget
- [ADR-080] Add support for styles preview in FormDescriptionEditor
- [ADR-081] Add support for multi-groups in Form/FormDescriptionEditor
- [ADR-082] Add support for optional text completion on textfield widgets
- [ADR-083] Add the possibility to hide or fade a diagram element
- [ADR-084] Improve support for View elements' tools icons

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/1437[#1437] [backend] `sirius-components-formdescriptioneditors` now depends on `sirius-components-forms`. `IFormDescriptionEditorWidget.java` have been deleted, `FormDescriptionEditor.java` now relies on `AbstractWidget.java` from `sirius-components-forms`.
- https://github.com/eclipse-sirius/sirius-components/issues/1437[#1437] [graphql] `formdescriptioneditor.graphqls` now depends on widgets from `forms.graphqls`

=== Dependency update

- [backenđ] Upgrade to Apache Batik 1.16.0 (from 1.14.0)
- [backend] Switch to https://github.com/spring-projects/spring-boot/releases/tag/v2.7.5[Spring Boot 2.7.5]
- [backend] Switch to EMFJson 2.3.3

=== Bug fixes

- https://github.com/eclipse-sirius/sirius-components/issues/1431[#1431] [form] The default implementation of the Property View should not try to handle a multi valuated EStructuralFeature of type String