@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2022 Obeo.
+ * Copyright (c) 2019, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -223,6 +223,7 @@ const handleNodeFeatures = (gqlNode: GQLNode, readOnly: boolean, autoLayout: boo
     features.delete(resizeFeature);
     features.delete(moveFeature);
     features.delete(withEditLabelFeature);
+    features.delete(deletableFeature);
   }
 
   if (autoLayout) {
