@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2022 Obeo and others.
+ * Copyright (c) 2021, 2023 Obeo and others.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -22,6 +22,7 @@ export interface ToolbarProps {
   setZoomLevel: (zoomLevel: string) => void;
   autoLayout: boolean;
   zoomLevel: string;
+  readOnly: boolean;
   subscribers: Subscriber[];
 }
 
